# SFML-platformer

./: .gitignore  .gitmodules  CMakeLists.txt
src/: CMakeLists.txt  action.h  animated_sprite.cpp  animated_sprite.h  assets.h  component.h  configuration.cpp  debug_cell.h  entity.h  entity_manager.cpp  entity_manager.h  flags.h  game_engine.cpp  game_engine.h  level.h  main.cpp  physics.h  player_config.h  static_collider.h  tag.h  tilemap.h  tileset.h  vec2.cpp  vec2.h
src/resources/: Box.atlas  Cannon.atlas  CoinsDiamonds.atlas  PalmTrees.atlas  Projectiles.atlas  TreasureHunters.tsx  VirtualGuy.atlas  assets.txt  config.txt  level1.lvl  level1.tmx  level2.tmx
src/scenes/: scene.cpp  scene.h
src/scenes/menu/: scene_menu.cpp  scene_menu.h
src/scenes/play/: scene_play.cpp  scene_play.h
src/systems/: sUserInput.cpp
